# refactor-platform-rs

./: .dockerignore  .gitignore  Cargo.toml  Claude.md  Dockerfile  README.md  build_and_run.sh  deploy_to_digitalocean_draft.md  docker-compose.dev-staging.yaml  docker-compose.nginx-preview.yaml  docker-compose.pr-preview.yaml  docker-compose.staging.yaml  docker-compose.yaml  docs-collab-server-deployment.md  entrypoint.sh
.claude/: CLAUDE.md  coding-standards.md  pr-instructions.md
docs/: setup.md
docs-collab-server/: Cargo.toml  Dockerfile
docs-collab-server/src/: auth.rs  config.rs  document.rs  document_tests.rs  lib.rs  main.rs  protocol.rs  protocol_tests.rs  registry.rs  registry_tests.rs  rest.rs  storage.rs  test_support.rs  ws.rs
docs-collab-server/tests/: auth.rs  authz_e2e.rs  document_sync.rs  e2e_provider.rs  protocol_conformance.proptest-regressions  protocol_conformance.rs  storage_pg.rs
docs-collab-server/tests/fixtures/: manifest.json
docs-collab-server/tests/fixtures/capture/: README.md  capture.mjs  package.json
domain/: Cargo.toml
domain/src/: action.rs  agreement.rs  coaching_relationship.rs  coaching_session.rs  coaching_session_goal.rs  coaching_session_hydration.rs  coaching_session_series.rs  coaching_session_topic.rs  coaching_session_topic_tests.rs  coaching_session_view.rs  collab_import.rs  cost.rs  emails.rs  encryption.rs  error.rs  goal.rs  goal_health.rs  goal_progress.rs  lib.rs  magic_link_token.rs  meeting_recording.rs  note.rs  oauth_connection.rs  oauth_token_storage.rs  organization.rs  overarching_goal.rs  password_policy.rs  password_reset.rs  personal_access_token.rs  test_support.rs  tiptap_metrics.rs  transcript_segment.rs  transcription.rs  user.rs
domain/src/coaching_session/: recurrence.rs
domain/src/gateway/: assembly_ai.rs  google_meet.rs  google_oauth.rs  mailersend.rs  mod.rs  recall_ai.rs  resend.rs  tiptap.rs  tiptap_metrics.rs  zoom.rs
domain/src/gateway/oauth/: google.rs  mod.rs  zoom.rs
domain/src/gateway/recall_ai/: mod.rs
domain/src/jwt/: claims.rs  mod.rs
domain/src/webhook/: bot_fatal.rs  bot_status.rs  mod.rs  recording_done.rs  recording_failed.rs  transcript_done.rs  transcript_failed.rs  transcript_processing.rs
entity/: Cargo.toml
entity/src/: action_assignees.rs  actions.rs  actions_users.rs  ai_privacy_level.rs  ai_suggested_items.rs  ai_suggestion.rs  coaching_relationships.rs  coaching_session_series.rs  coaching_session_topics.rs  coaching_session_views.rs  coaching_sessions.rs  coaching_sessions_goals.rs  cost_metric.rs  cost_pricing_config.rs  cost_unit.rs  duration.rs  goals.rs  jwt.rs  jwts.rs  lib.rs  links.rs  magic_link_tokens.rs  meeting_provider.rs  meeting_recording.rs  meeting_recording_status.rs  meeting_recordings.rs  oauth_connections.rs  organizations.rs  organizations_users.rs  password_reset_attempts.rs  pat_status.rs  personal_access_tokens.rs  pipeline_provider.rs  platform_cost_metrics.rs  prelude.rs  provider.rs  roles.rs  sentiment.rs  status.rs  token_purpose.rs  (+13 more)
meeting-ai/: Cargo.toml
meeting-ai/src/: error.rs  lib.rs
meeting-ai/src/traits/: analysis.rs  mod.rs  recording_bot.rs  transcription.rs
meeting-ai/src/types/: analysis.rs  mod.rs  recording.rs  transcription.rs
meeting-auth/: Cargo.toml
meeting-auth/src/: error.rs  lib.rs
meeting-auth/src/api_key/: auth.rs  bearer.rs  mod.rs
meeting-auth/src/credentials/: mod.rs  storage.rs
meeting-auth/src/http/: client.rs  mod.rs  retry.rs
meeting-auth/src/oauth/: mod.rs  pkce.rs  provider.rs  state.rs
meeting-auth/src/oauth/providers/: google.rs  mod.rs  zoom.rs
meeting-auth/src/oauth/token/: encryption.rs  manager.rs  mod.rs  storage.rs  tokens.rs
meeting-auth/src/providers/: config.rs  mod.rs
meeting-auth/src/webhook/: hmac.rs  mod.rs  svix.rs
migration/: Cargo.toml  README.md
migration/src/: base_refactor_platform_rs.sql  lib.rs  m20240210_153056_create_schema_and_base_db_setup.rs  m20240211_174355_base_migration.rs  m20250509_164646_add_initial_non_prod_user.rs  m20250509_164646_add_initial_user.rs  m20250610_104530_add_role_to_users.rs  m20250611_115337_promote_admin_user_to_admin_role.rs  m20250705_200000_add_timezone_to_users.rs  m20250730_000000_add_coaching_sessions_sorting_indexes.rs  m20250801_000000_add_sorting_indexes.rs  m20250916_060419_add_user_roles_table_and_super_admin.rs  m20251001_000000_migrate_regular_users_to_user_roles.rs  m20251007_093603_add_user_roles_table_and_super_admin.rs  m20251008_000000_migrate_admin_users_to_super_admin_role.rs  m20251009_000000_migrate_regular_users_to_user_roles.rs  m20251024_000000_remove_organizations_users_table.rs  m20251220_000001_add_oauth_connections.rs  m20251220_000001_add_user_integrations.rs  m20251220_000002_add_meeting_fields_to_relationships.rs  m20251220_000002_add_meeting_fields_to_sessions.rs  m20251220_000003_add_meeting_recording_tables.rs  m20251223_000001_add_coachee_ai_privacy_level.rs  m20251224_000001_add_lemur_fields.rs  m20251228_000001_add_action_assignees_table.rs  m20251228_000001_add_actions_users_table.rs  m20260228_000000_rename_overarching_goals_to_goals.rs  m20260309_000000_goal_relationship_scoping.rs  m20260309_000001_backfill_coaching_sessions_goals.rs  m20260311_064303_add_zoom_to_provider_enum.rs  m20260312_000000_add_goal_id_to_actions.rs  m20260316_000000_fix_goals_session_fk_on_delete.rs  m20260317_000000_add_on_hold_to_status_enum.rs  m20260330_000000_add_magic_link_tokens.rs  m20260407_000001_add_meeting_recordings.rs  m20260407_000002_add_transcriptions.rs  m20260407_000003_add_transcript_segments.rs  m20260429_000000_add_personal_access_tokens.rs  m20260511_000000_add_hydrated_at_to_coaching_sessions.rs  m20260513_000000_add_purpose_to_magic_link_tokens.rs  (+19 more)
service/: Cargo.toml  refactor-platform.service
service/src/: config.rs  lib.rs  logging.rs
sse/: Cargo.toml
sse-test-client/: Cargo.toml  README.md
sse-test-client/src/: api_client.rs  auth.rs  main.rs  scenarios.rs  sse_client.rs
sse/src/: connection.rs  domain_event_handler.rs  lib.rs  manager.rs  message.rs
(+281 files in other folders)
