[package]
name = "refactor_platform_rs"
version = "1.0.0-beta1"
edition = "2021"

default-run = "refactor_platform_rs"

[workspace]
members = [".", "entity_api", "entity", "migration", "service", "web", "domain"]

[dependencies]
service = { path = "service" }
entity_api = { path = "entity_api" }
web = { path = "web" }

clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = "1.44.2"
openssl-sys = { version = "0.9.107", features = ["vendored"] }

[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"
