[package]
name = "refactor_platform_rs"
version = "1.0.0-beta2"
edition = "2021"

default-run = "refactor_platform_rs"

[workspace]
members = [".", "entity_api", "entity", "events", "migration", "service", "web", "domain", "sse", "testing-tools"]
# Exclude testing-tools from default builds - it's a development/testing tool only
# and should not be built or deployed in production environments
default-members = [".", "entity_api", "entity", "events", "migration", "service", "web", "domain", "sse"]

[dependencies]
events = { path = "events" }
service = { path = "service" }
entity_api = { path = "entity_api" }
web = { path = "web" }
sse = { path = "sse" }

clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = "1.44.2"
openssl-sys = { version = "0.9.107", features = ["vendored"] }

