[package]
name = "refactor_platform_rs"
version = "1.0.0-beta3"
edition = "2021"

default-run = "refactor_platform_rs"

[workspace]
members = [".", "entity_api", "entity", "events", "migration", "service", "web", "domain", "sse", "testing-tools", "meeting-auth", "meeting-ai", "docs-collab-server"]
# Exclude testing-tools and docs-collab-server from default builds: dev/experimental
# crates that should not be built or deployed with the main application.
default-members = [".", "entity_api", "entity", "events", "migration", "service", "web", "domain", "sse", "meeting-auth", "meeting-ai"]

[dependencies]
domain = { path = "domain" }
events = { path = "events" }
meeting-ai = { path = "meeting-ai" }
meeting-auth = { path = "meeting-auth" }
service = { path = "service" }
entity_api = { path = "entity_api" }
web = { path = "web" }
sse = { path = "sse" }

clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = "1.44.2"
openssl-sys = { version = "0.9.107", features = ["vendored"] }

