[package]
name = "entity"
version = "1.0.0-beta3"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
axum-login = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["time", "runtime-tokio"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }

uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dependencies.sea-orm]
version = "1.1.0"
features = ["with-uuid"]
