[package]
name = "meeting-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
meeting-auth = { path = "../meeting-auth" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockall = "0.13"
