[package]
name = "migration"
version = "1.0.0-beta1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
sqlx = { version = "0.8.3", features = ["time", "runtime-tokio"] }
# sqlx-sqlite = { version = "0.8.3" }                                   # Updated version

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
