[package]
name = "migration"
version = "1.0.0-beta1"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.38", features = ["serde"] }
password-auth = "1.0.0"
sqlx = { version = "0.8.2", features = ["time", "runtime-tokio"] }
service = { path = "../service" }
entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
