[package]
name = "migration"
version = "1.0.0-beta3"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
chrono = { version = "0.4.38", features = ["serde"] }
password-auth = "1.0.0"
sqlx = { version = "0.8.2", features = ["time", "runtime-tokio"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
service = { path = "../service" }
entity = { path = "../entity" }
entity_api = { path = "../entity_api" }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
