[package]
name = "service"
version = "1.0.0-beta1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sea-orm]
version = "1.1.0" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-uuid",
]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
dotenvy = "0.15"
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.3", features = ["time", "runtime-tokio"] }
# sqlx-sqlite = { version = "0.8.3" } # Updated version
tokio = { version = "1.40", features = ["full"] }
tower = { version = "0.5.1", features = [
    "tower-http",
] } # Added feature for tower
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
semver = { version = "1.0.23", features = ["serde"] }
