[package]
name = "sse-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sse-test-client"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# SSE parsing
eventsource-client = "0.12"
futures-util = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Output formatting
colored = "2.1"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
