[package]
name = "sse"
version = "1.0.0-beta2"
edition = "2021"

[dependencies]
# SSE and async
axum = "0.7.7"
tokio = { version = "1.44.2", features = ["sync"] }
async-stream = "0.3"

# Concurrency
dashmap = "6.1"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Logging
log = "0.4.22"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }
