[package]
name = "sse"
version = "1.0.0-beta2"
edition = "2021"

[dependencies]
# Internal crates
events = { path = "../events" }

# SSE and async
axum = "0.7.7"
tokio = { version = "1.44.2", features = ["sync"] }
async-stream = "0.3"
async-trait = "0.1.83"

# Concurrency
dashmap = "6.1"

# Database
sea-orm = { version = "1.1.0", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Logging
log = "0.4.22"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }
